--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello from LearnChess</h1>
+<header>
+    <nav>
+        <a href="/main" class="navlink">Главная</a>
+        <a href="/stats" class="navlink">Рейтинг</a>
+    </nav>
+</header>
+<main>
+    {% block content %}{% endblock %}
+</main>
 </body>
 </html>
