--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -1,19 +1,24 @@
 {% extends "base.html" %}
 
 {% block content %}
-{% if user %}
-<h1>Привет, {{ user.first_name }} ({{ user.username }})</h1>
-<div class="avatar-wrapper">
-    {% if user.avatar_url %}
-    <img src="{{ user.avatar_url }}" alt="avatar" style="width: 100%; height: 100%;" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" />
-    {% endif %}
-    <div class="avatar-placeholder"
-         {% if user.avatar_url %} style="display: none;" {% endif %}
-         style="background-color: hsl({{ (user.id % 360) }}, 70%, 50%);">
-        {{ user.first_name[0]|upper }}
+<div class="account-page">
+    {% if user %}
+    <h1>Привет, {{ user.first_name }}{% if user.username %} (@{{ user.username }}){% endif %}</h1>
+    <div class="avatar-wrapper">
+        {% if user.avatar_url %}
+        <img src="{{ user.avatar_url }}" alt="avatar"
+             style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;"
+             onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';" />
+        {% endif %}
+        <div class="avatar-placeholder"
+             {% if user.avatar_url %} style="display: none;" {% endif %}
+             style="width: 100px; height: 100px; display: flex; align-items: center; justify-content: center; border-radius: 50%; color: white; font-size: 2em;
+             background-color: hsl({{ (user.id % 360) }}, 70%, 50%);">
+            {{ user.first_name[0]|upper }}
+        </div>
     </div>
+    {% else %}
+    <h1>Вы не авторизованы</h1>
+    {% endif %}
 </div>
-{% else %}
-<h1>Вы не авторизованы</h1>
-{% endif %}
 {% endblock %}
