--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,13 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <script src="{{ url_for('static', filename='js/init.js') }}"></script>
-    <title>Document</title>
+    <title>LearnChess</title>
 </head>
 <body>
 <main>
@@ -27,5 +26,6 @@
         <span>Аккаунт</span>
     </a>
 </nav>
+<script src="{{ url_for('static', filename='js/init.js') }}"></script>
 </body>
 </html>
